--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 body {
+    margin: 0;
     font-family: monospace;
 }
 body, a, a:link, a:visited, a:active, a:hover {
     color: #000;
 }
 h1 {
+    text-align: center;
+}
+.loading {
+    width: 100%;
     text-align: center;
 }
 .dictionary {
