--- a/css/style.css
+++ b/css/style.css
@@ -8,24 +8,21 @@ body, a, a:link, a:visited, a:active {
 a:hover, th .fa:hover {
     color: #336699;
 }
-h1 {
+h1, .loading {
     text-align: center;
 }
-.loading {
+.loading, .dictionary, input[type="search"] {
     width: 100%;
-    text-align: center;
 }
 .dictionary {
     table-layout: fixed;
     margin: auto;
-    width: 100%;
     max-width: 600px;
 }
 .dictionary, .filtered, .tablesorter-headerAsc .fa-caret-down, .tablesorter-headerDesc .fa-caret-up {
     display: none;
 }
 input[type="search"] {
-    width: 100%;
     border: 1px solid #ccc;
 }
 th, td {
