--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 body, a, a:link, a:visited, a:active {
     color: #000;
 }
-a:hover, th .fa:hover {
+a:hover, .header-clickable:hover {
     color: #336699;
 }
 h1, .loading {
